--- a/PlotBasedRec.ipynb
+++ b/PlotBasedRec.ipynb
@@ -1,21 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Movie Recommendation System\n",
+    "\n",
+    "In this Jupyter Notebook, we are building a movie recommendation system based on plot similarity. The workflow involves the following steps:\n",
+    "\n",
+    "1. **Importing Libraries**: We import necessary libraries such as `pandas` for data manipulation, `numpy` for numerical operations, and `sklearn` for machine learning utilities.\n",
+    "\n",
+    "2. **Loading Data**: We load the movie dataset from a CSV file (`tmdb_5000_movies.csv`) and select only the required columns (`id`, `title`, `overview`). We also handle missing values by dropping rows with missing overviews.\n",
+    "\n",
+    "3. **Text Vectorization**: We use `TfidfVectorizer` from `sklearn` to convert the movie overviews into a TF-IDF matrix. This matrix represents the importance of words in each overview while reducing the impact of common words (stop words).\n",
+    "\n",
+    "4. **Cosine Similarity Calculation**: We compute the cosine similarity matrix from the TF-IDF matrix. This matrix helps in measuring the similarity between different movie overviews.\n",
+    "\n",
+    "5. **Recommendation Function**: We define a function `get_recommendations` that takes a movie title as input and returns the top 10 recommended movies based on plot similarity. The function uses the cosine similarity matrix to find similar movies and applies the softmax function to convert similarity scores into likelihood percentages.\n",
+    "\n",
+    "6. **Testing the Recommendation System**: We test the recommendation function with an example movie title (\"The Shawshank Redemption\") to see the top recommended movies and their similarity scores.\n",
+    "\n",
+    "By following these steps, we aim to create a system that can suggest movies with similar plots, enhancing the user's movie-watching experience."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np \n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import linear_kernel\n",
-    "df2=pd.read_csv(\"./tmdb_5000_movies.csv\")"
+    "from sklearn.metrics.pairwise import linear_kernel"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +122,7 @@
        "4                               John Carter  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,90 +161,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Series mapping movie titles to DataFrame indices\n",
-    "indices = pd.Series(df.index, index=df['title']).drop_duplicates()\n",
+    "def softmax(x):\n",
+    "    e_x = np.exp(x - np.max(x))\n",
+    "    return e_x / e_x.sum()\n",
     "\n",
     "def get_recommendations(title, cosine_sim=cosine_sim):\n",
     "    \"\"\"\n",
-    "    Given a movie title, return the top recommendations based on plot similarity.\n",
+    "    Given a movie title, return the top recommendations based on plot similarity,\n",
+    "    print each recommended movie with its similarity score,\n",
+    "    and show a \"likelihood\" (converted cosine similarities using softmax).\n",
     "\n",
     "    Parameters:\n",
     "        title (str): The title of the movie.\n",
     "        cosine_sim (ndarray): Precomputed cosine similarity matrix.\n",
     "        \n",
     "    Returns:\n",
-    "        list: A list of recommended movie titles.\n",
+    "        tuple: A tuple containing a list of recommended movie titles and a list of corresponding (index, score) pairs.\n",
     "    \"\"\"\n",
     "    # Retrieve the index for the movie that matches the title\n",
     "    idx = indices.get(title)\n",
     "    \n",
-    "    # If the title is not found, return an empty list\n",
     "    if idx is None:\n",
     "        print(f\"Title '{title}' not found in dataset.\")\n",
-    "        return []\n",
+    "        return [], []\n",
     "    \n",
-    "    # Enumerate over the similarity scores and sort them in descending order\n",
+    "    # Enumerate over similarity scores and sort in descending order\n",
     "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
     "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
     "    \n",
-    "    # Exclude the first entry (the movie itself) and select the next top 10 recommendations\n",
+    "    # Exclude the movie itself and take the top 10 recommendations\n",
     "    sim_scores = sim_scores[1:11]\n",
-    "    \n",
-    "    # Retrieve the indices of the recommended movies\n",
     "    movie_indices = [i[0] for i in sim_scores]\n",
     "    \n",
-    "    # Return the titles of the recommended movies\n",
-    "    return df['title'].iloc[movie_indices].tolist(), sim_scores\n"
+    "    # Retrieve the recommended movie titles\n",
+    "    recommended_titles = df['title'].iloc[movie_indices].tolist()\n",
+    "    \n",
+    "    # Convert similarity scores to likelihoods using softmax\n",
+    "    scores = np.array([score for _, score in sim_scores])\n",
+    "    likelihoods = softmax(scores) * 100  # convert to percentage\n",
+    "    \n",
+    "    # Print the results in a neat table\n",
+    "    print(\"Top 10 Recommendations:\")\n",
+    "    print(\"{:<30} {:>10} {:>15}\".format(\"Movie Title\", \"Score\", \"Likelihood (%)\"))\n",
+    "    print(\"-\" * 60)\n",
+    "    for rec_title, (_, score), likelihood in zip(recommended_titles, sim_scores, likelihoods):\n",
+    "        print(\"{:<30} {:>10.4f} {:>15.2f}\".format(rec_title, score, likelihood))\n",
+    "    \n",
+    "    return recommended_titles, sim_scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendations for 'Forrest Gump':\n",
-      "An American Haunting\n",
-      "Heaven is for Real\n",
-      "Niagara\n",
-      "The Shaggy Dog\n",
-      "Room\n",
-      "Frozen\n",
-      "Love in the Time of Cholera\n",
-      "Lovely, Still\n",
-      "Mr. Bean's Holiday\n",
-      "I Married a Strange Person!\n",
-      "[(2685, np.float64(0.15962640204016756)), (2903, np.float64(0.11886080080825893)), (4285, np.float64(0.11589609863543196)), (725, np.float64(0.1042650018990765)), (2759, np.float64(0.1033232292122484)), (124, np.float64(0.0996770447464312)), (1098, np.float64(0.09814023050733961)), (3648, np.float64(0.09539959674535414)), (1871, np.float64(0.09310460038833449)), (4638, np.float64(0.09093249895809938))]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Top 10 Recommendations:\n",
+      "Movie Title                         Score  Likelihood (%)\n",
+      "------------------------------------------------------------\n",
+      "Civil Brand                        0.1884           10.74\n",
+      "Prison                             0.1334           10.17\n",
+      "Escape Plan                        0.1314           10.15\n",
+      "Fortress                           0.1140            9.97\n",
+      "Penitentiary                       0.1084            9.92\n",
+      "The 40 Year Old Virgin             0.1079            9.91\n",
+      "Fatal Attraction                   0.0990            9.83\n",
+      "A Christmas Story                  0.0944            9.78\n",
+      "The Longest Yard                   0.0928            9.77\n",
+      "Toy Story 3                        0.0920            9.76\n"
      ]
     }
    ],
    "source": [
+    "# Create a mapping from movie titles to their indices\n",
+    "indices = pd.Series(df.index, index=df['title']).to_dict()\n",
+    "\n",
     "# Test the recommendation function with an example title\n",
-    "example_title = \"Forrest Gump\"  # Replace with an actual title from your dataset\n",
+    "example_title = \"The Shawshank Redemption\"  # Replace with an actual title from your dataset\n",
     "recommendations, sscores = get_recommendations(example_title)\n",
     "\n",
-    "print(f\"Recommendations for '{example_title}':\")\n",
-    "for rec in recommendations:\n",
-    "    print(rec)\n",
-    "print(sscores)\n"
+    "\n"
    ]
   }
  ],
