added markdowns to both models

--- a/DemographicFiltering.ipynb
+++ b/DemographicFiltering.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Demographic Filtering Movie Ranking System\n",
+    "\n",
+    "This notebook demonstrates the implementation of a demographic filtering approach to rank movies based on their weighted ratings. We utilise two datasets from TMDB: `tmdb_5000_movies.csv` and `tmdb_5000_credits.csv`.\n",
+    "\n",
+    "**Key Steps:**\n",
+    "\n",
+    "- **Data Loading and Merging:**  \n",
+    "  The notebooks load the movies and credits datasets, rename columns in the credits dataset for clarity, and merge the two datasets on the movie ID.\n",
+    "\n",
+    "- **Demographic Filtering:**  \n",
+    "  We apply a filtering technique that only considers movies with a sufficiently high number of votes.  \n",
+    "  - **v:** Number of votes for the movie.  \n",
+    "  - **R:** Average rating of the movie.  \n",
+    "  - **C:** Mean vote across the entire dataset.  \n",
+    "  - **m:** Minimum number of votes required for a movie to be considered (set at the 90th percentile of vote counts).  \n",
+    "  A weighted rating is then calculated using the IMDB formula to balance both the popularity and quality of the movies.\n",
+    "\n",
+    "- **Ranking Movies:**  \n",
+    "  Only movies meeting the vote threshold are ranked based on their computed weighted rating score, ensuring that the final rankings reflect both user approval and statistical reliability.\n",
+    "\n",
+    "**Note:**  \n",
+    "Ensure that the CSV files are located in the correct directory before running the cells.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -10,6 +38,22 @@
     "import numpy as np \n",
     "df1=pd.read_csv(\"./tmdb_5000_credits.csv\")\n",
     "df2=pd.read_csv(\"./tmdb_5000_movies.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename Columns in Credits Dataset and Merge with Movies Dataset\n",
+    "\n",
+    "- **Renaming Columns:**  \n",
+    "  We start by renaming the columns of the credits dataset (`df1`) for clarity. The columns are renamed to: `id`, `tittle`, `cast`, and `crew`.\n",
+    "\n",
+    "- **Merging Datasets:**  \n",
+    "  Next, we merge the movies dataset (`df2`) with the credits dataset (`df1`) on the common column `id`. This enriches the movies data with corresponding credits information.\n",
+    "\n",
+    "- **Verification:**  \n",
+    "  Finally, we display the first 5 rows of the merged dataframe to verify that the merge has been successful.\n"
    ]
   },
   {
@@ -287,8 +331,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute the Mean Vote (C)\n",
+    "\n",
+    "For our demographic filtering approach, we use the following definitions:\n",
+    "\n",
+    "- **v:** Number of votes for the movie.\n",
+    "- **m:** Minimum number of votes required to be listed in the chart.\n",
+    "- **R:** Average rating of the movie.\n",
+    "- **C:** Mean vote across the entire dataset (or report).\n",
+    "\n",
+    "Since the dataset already provides values for **v** and **R**, we calculate **C** as the mean of the `vote_average` column.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -303,15 +363,18 @@
     }
    ],
    "source": [
-    "# v is the number of votes for the movie;\n",
-    "# m is the minimum votes required to be listed in the chart;\n",
-    "# R is the average rating of the movie; And\n",
-    "# C is the mean vote across the whole report\n",
-    "\n",
-    "# already have v and r\n",
-    "\n",
     "C= df2['vote_average'].mean()\n",
     "C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determine the Vote Count Threshold (m)\n",
+    "\n",
+    "To ensure that only movies with a statistically significant number of votes are considered, we define **m** as the minimum number of votes required. This is set to the 90th percentile of the `vote_count` values.  \n",
+    "Only movies with a vote count equal to or above this threshold will be included in the ranking.\n"
    ]
   },
   {
@@ -336,6 +399,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter Movies Based on Vote Count\n",
+    "\n",
+    "We create a copy of the movies dataframe (`df2`) and filter it to include only those movies with a `vote_count` greater than or equal to **m** (the 90th percentile threshold).  \n",
+    "This filtered dataframe, `q_movies`, contains only the movies that have sufficient votes to be considered statistically reliable for the ranking.  \n",
+    "Finally, we display the shape of `q_movies` to confirm the number of movies that meet this criterion.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -354,6 +428,35 @@
    "source": [
     "q_movies = df2.copy().loc[df2['vote_count'] >= m]\n",
     "q_movies.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate Weighted Rating and Rank Movies\n",
+    "\n",
+    "In this cell we perform the following steps:\n",
+    "\n",
+    "1. **Define the Weighted Rating Function:**  \n",
+    "   We create a function `weighted_rating()` that calculates the weighted rating for each movie using the IMDB formula:  \n",
+    "   \\[\n",
+    "   \\text{weighted rating} = \\left(\\frac{v}{v+m}\\right) \\times R + \\left(\\frac{m}{v+m}\\right) \\times C\n",
+    "   \\]\n",
+    "   where:\n",
+    "   - **v:** Number of votes for the movie.\n",
+    "   - **R:** Average rating of the movie.\n",
+    "   - **m:** Minimum vote threshold.\n",
+    "   - **C:** Mean vote across the dataset.\n",
+    "\n",
+    "2. **Calculate the 'score':**  \n",
+    "   We apply the `weighted_rating()` function across each row of the filtered movies dataframe (`q_movies`) to create a new column named **score**.\n",
+    "\n",
+    "3. **Sort Movies by Score:**  \n",
+    "   The dataframe is then sorted in descending order based on the **score**, so that the movies with the highest weighted ratings appear first.\n",
+    "\n",
+    "4. **Display Top Movies:**  \n",
+    "   Finally, we print out the top movies (here, the code displays the top 50 movies, though you can adjust this number as needed).\n"
    ]
   },
   {
