--- a/PlotBasedRec.ipynb
+++ b/PlotBasedRec.ipynb
@@ -18,9 +18,7 @@
     "\n",
     "5. **Recommendation Function**: We define a function `get_recommendations` that takes a movie title as input and returns the top 10 recommended movies based on plot similarity. The function uses the cosine similarity matrix to find similar movies and applies the softmax function to convert similarity scores into likelihood percentages.\n",
     "\n",
-    "6. **Testing the Recommendation System**: We test the recommendation function with an example movie title (\"The Shawshank Redemption\") to see the top recommended movies and their similarity scores.\n",
-    "\n",
-    "By following these steps, we aim to create a system that can suggest movies with similar plots, enhancing the user's movie-watching experience."
+    "6. **Testing the Recommendation System**: We test the recommendation function with an example movie title (\"The Shawshank Redemption\") to see the top recommended movies and their similarity scores."
    ]
   },
   {
@@ -38,7 +36,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Load and Preprocess the Movie Dataset\n",
+    "\n",
+    "In this cell we read the movie dataset from the CSV file `tmdb_5000_movies.csv` and select only the essential columns: **id**, **title**, and **overview**.  \n",
+    "We then drop any rows where the **overview** is missing to prevent issues during the vectorisation stage. Finally, we display the first few rows of the cleaned dataset to verify that the data has been loaded correctly.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -143,8 +146,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vectorisation and Similarity Computation\n",
+    "\n",
+    "In this cell we initialise a `TfidfVectoriser` with English stop words to convert the text in the **overview** column into a TF‑IDF matrix.  \n",
+    "This matrix represents the importance of each word in the context of the entire dataset.  \n",
+    "We then compute the cosine similarity matrix from the TF‑IDF matrix, which quantifies how similar each pair of movie overviews is.  \n",
+    "This similarity matrix is a key component of our plot‐based recommendation system.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +172,25 @@
     "# Compute cosine similarity matrix from the TF-IDF matrix\n",
     "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define Recommendation Functions\n",
+    "\n",
+    "In this cell we define two key functions:\n",
+    "\n",
+    "1. **softmax(x):**  \n",
+    "   This function applies the softmax transformation to the input array `x`. It normalises the cosine similarity scores so that they form a probability distribution, which is then multiplied by 100 to represent the values as percentages.\n",
+    "\n",
+    "2. **get_recommendations(title, cosine_sim=cosine_sim):**  \n",
+    "   This function retrieves and displays the top 10 recommended movies based on plot similarity. It performs the following steps:\n",
+    "   - **Index Retrieval:** Finds the index of the specified movie title in the dataset.\n",
+    "   - **Score Computation:** Enumerates and sorts the cosine similarity scores in descending order, excluding the movie itself.\n",
+    "   - **Likelihood Calculation:** Converts the similarity scores into percentage likelihoods using the softmax function.\n",
+    "   - **Output:** Prints a neatly formatted table showing each recommended movie, its similarity score, and its likelihood percentage, and returns these values as a tuple.\n"
    ]
   },
   {
@@ -212,6 +246,18 @@
     "        print(\"{:<30} {:>10.4f} {:>15.2f}\".format(rec_title, score, likelihood))\n",
     "    \n",
     "    return recommended_titles, sim_scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Mapping and Test the Recommendation Function\n",
+    "\n",
+    "In this cell we create a dictionary that maps movie titles to their corresponding indices in the DataFrame.  \n",
+    "This mapping is essential for quickly retrieving the index of a movie when running our recommendation function.  \n",
+    "We then test the recommendation system using an example title (\"The Shawshank Redemption\").  \n",
+    "If this title is not present in your dataset, please replace it with one that exists.\n"
    ]
   },
   {
